--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <!-- 🚩 경고 -->
 <div id="copyright">
     <div id="maker">만든이 : 별난오크#32725</div>
-    <div>본 페이지는 개인적 취미 및 공부 목적으로 제작하였으며 상업적이지 않습니다. <br>모든 이미지와 폰트의 저작권은 저에게 없습니다.</div>
+    <div>본 페이지는 개인적 취미 및 공부 목적으로 제작하였습니다. <br>모든 이미지와 폰트의 저작권은 저에게 없습니다.</div>
 </div><!-- copyright -->
 
 <!-- 🚩 타이틀 -->
